--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "framer-motion": "^10.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^11.0.2",
     "sass": "^1.68.0"
   },
   "devDependencies": {
